[gd_scene load_steps=2 format=3 uid="uid://bije22ubluu3w"]

[ext_resource type="Script" path="res://scenes/ui/menu.gd" id="1_qswpb"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qswpb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(3.85046e-07, 0.58805, 0.590802, 1)
metadata/_edit_lock_ = true

[node name="VersionLabel" type="Label" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -33.0
offset_right = 61.0
offset_bottom = -10.0
grow_vertical = 0
text = "V 4.2.0"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(280, 0)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 220.0
offset_top = 340.0
offset_right = -220.0
offset_bottom = -340.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="TestButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Test Data (Editor)"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LastButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Previous"

[node name="NewButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "+"

[node name="ViewAllButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "View All"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
disabled = true
text = "Settings"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AboutButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
disabled = true
text = "About"

[node name="HelpButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
disabled = true
text = "?"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit"

[connection signal="pressed" from="VBoxContainer/TestButton" to="." method="_on_test_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LastButton" to="." method="_on_last_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NewButton" to="." method="_on_new_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ViewAllButton" to="." method="_on_view_all_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
